grammar/fox.gram
program        → declaration* EOF ;
declaration    → classDeclaration | varDeclaration | functionDeclaration | statement;
statement      → exprStmt | printStmt ;
varDeclaration → ("var" | "const") IDENTIFIER ( "=" expression )? ";" ;
functionDeclaration → "function" function ;
function       → IDENTIFIER "(" parameters? ")" block ;
classDeclaration → "class" IDENTIFIER ("<" IDENTIFIER)? "{" function* "}";

expression     → literal | unary | binary | grouping ;
literal        → NUMBER | STRING | "true" | "false" | "nil" ;
grouping       → "(" expression ")" ;
unary          → ( "-" | "!" ) expression ;
binary         → expression operator expression ;
operator       → "==" | "!=" | "<" | "<=" | ">" | ">=" | "+"  | "-"  | "*" | "/" ;

expression     → equality ;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary | call ;
call           → primary ( "(" arguments? ")" | "." IDENTIFIER)* ;
primary        → NUMBER | STRING | "true" | "false" | "nil" | "this" | "(" expression ")" | "super" "." IDENTIFIER ;
arguments      → expression ( "," expression )* ;

expression     → assignment ;
assignment     → ( call "." )? IDENTIFIER "=" assignment | logic_or ;
logic_or       → logic_and ( "or" logic_and )* ;
logic_and      → equality ( "and" equality )* ;

statement      →
               | exprStmt
               | ifStmt
               | printStmt
               | forStmt
               | whileStmt
               | returnStmt
               | "break"
               | "continue"
               | block ";"

ifStmt         → "if" "(" expression ")" statement
               ( "else" statement )? ;
forStmt        → "for" "(" ( varDecl | exprStmt | ";" )
                 expression? ";"
                 expression? ")" statement ;
whileStmt      → "while" "(" expression ")" statement ;
returnStmt     → "return" expression? ";" ;
block          → "{" declaration* "}" ;
